// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalProvider basic usage should match snapshot 1`] = `

<div>
  Modal content
</div>

`;

exports[`ModalProvider calling closeModal should render snapshots: after closeModal 1`] = `

<div>
  Modal content
</div>

`;

exports[`ModalProvider calling closeModal should render snapshots: before closeModal 1`] = `

<div>
  Modal content
</div>
<div>
  <div style="align-items: flex-start; bottom: 0px; display: flex; justify-content: center; left: 0px; max-height: 100vh; max-width: 100vw; overflow: auto; position: fixed; right: 0px; top: 0px;">
    <div style="background-color: rgba(0, 0, 0, 0.2); bottom: 0px; left: 0px; position: fixed; right: 0px; top: 0px; transform: translate3d(0px, -1px, 0px);">
    </div>
    <div role="dialog"
         style="background-color: rgb(255, 255, 255); margin: 3rem auto; max-width: 100vw; padding: 1.5rem; transform: translate3d(0px, 1px, 0px); width: 80rem;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`ModalProvider calling openModal should render snapshots: after openModal 1`] = `

<div>
  Modal content
</div>
<div>
  <div style="align-items: flex-start; bottom: 0px; display: flex; justify-content: center; left: 0px; max-height: 100vh; max-width: 100vw; overflow: auto; position: fixed; right: 0px; top: 0px;">
    <div style="background-color: rgba(0, 0, 0, 0.2); bottom: 0px; left: 0px; position: fixed; right: 0px; top: 0px; transform: translate3d(0px, -1px, 0px);">
    </div>
    <div role="dialog"
         style="background-color: rgb(255, 255, 255); margin: 3rem auto; max-width: 100vw; padding: 1.5rem; transform: translate3d(0px, 1px, 0px); width: 80rem;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`ModalProvider calling openModal should render snapshots: before openModal 1`] = `

<div>
  Modal content
</div>

`;

exports[`ModalProvider passing custom ContentWrapper should match snapshots: with isOpen=false 1`] = `

<div>
  <div data-isopen="false">
    Modal content
  </div>
</div>

`;

exports[`ModalProvider passing custom ContentWrapper should match snapshots: with isOpen=true 1`] = `

<div>
  <div data-isopen="true">
    Modal content
  </div>
</div>
<div>
  <div style="align-items: flex-start; bottom: 0px; display: flex; justify-content: center; left: 0px; max-height: 100vh; max-width: 100vw; overflow: auto; position: fixed; right: 0px; top: 0px;">
    <div style="background-color: rgba(0, 0, 0, 0.2); bottom: 0px; left: 0px; position: fixed; right: 0px; top: 0px; transform: translate3d(0px, -1px, 0px);">
    </div>
    <div role="dialog"
         style="background-color: rgb(255, 255, 255); margin: 3rem auto; max-width: 100vw; padding: 1.5rem; transform: translate3d(0px, 1px, 0px); width: 80rem;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`ModalProvider passing custom ModalComponent should match snapshot 1`] = `

<div>
  Modal content
</div>
<div>
  <div style="align-items: flex-start; bottom: 0px; display: flex; justify-content: center; left: 0px; max-height: 100vh; max-width: 100vw; overflow: auto; position: fixed; right: 0px; top: 0px;">
    <div style="background-color: rgba(0, 0, 0, 0.2); bottom: 0px; left: 0px; position: fixed; right: 0px; top: 0px; transform: translate3d(0px, -1px, 0px);">
    </div>
    <div data-testid="modal-component">
      content
    </div>
  </div>
</div>

`;

exports[`ModalProvider passing custom ModalContainer should match snapshot 1`] = `

<div>
  Modal content
</div>
<div>
  <div data-testid="modal-container">
    <div role="dialog"
         style="background-color: rgb(255, 255, 255); margin: 3rem auto; max-width: 100vw; padding: 1.5rem; transform: translate3d(0px, 1px, 0px); width: 80rem;"
    >
      content
    </div>
  </div>
</div>

`;

exports[`ModalProvider providing content should render snapshot 1`] = `

<div>
  Modal content
</div>
<div>
  <div style="align-items: flex-start; bottom: 0px; display: flex; justify-content: center; left: 0px; max-height: 100vh; max-width: 100vw; overflow: auto; position: fixed; right: 0px; top: 0px;">
    <div style="background-color: rgba(0, 0, 0, 0.2); bottom: 0px; left: 0px; position: fixed; right: 0px; top: 0px; transform: translate3d(0px, -1px, 0px);">
    </div>
    <div role="dialog"
         style="background-color: rgb(255, 255, 255); margin: 3rem auto; max-width: 100vw; padding: 1.5rem; transform: translate3d(0px, 1px, 0px); width: 80rem;"
    >
      content
    </div>
  </div>
</div>

`;
